# PyMusic-Instrument

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
Instrument/: Instrument.py
docs/source/: conf.py  index.rst  installation.rst  usage.rst
tests/: test.py
