[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "PyMusic-Instrument"
authors = [{name = "Mohammad Ibrahim", email = "cshore.2750mi@gmail.com"}]
dynamic = ["0.4", "Library for generating and playing piano notes"]
dependencies = [
	numpy,
	pyaudio
 ]
 